# pyfarm-api

./: README.md  pyproject.toml
src/pyfarm/api/: __init__.py  app.py  client.py  models.py
src/pyfarm/api/routes/: control.py  health.py
tests/: test_api.py
