[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-api"
version = "0.1.0"
description = "API gateway for pyfarm ecosystem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core[storage]>=0.1.0",
    "pyfarm-config>=0.1.0",
    "pyfarm-auth>=0.1.0",
    "fastapi>=0.103,<1.0",
    "uvicorn[standard]>=0.20,<0.21",
    "pydantic>=2.0,<3.0",
    "httpx>=0.23,<1.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.20,<1.0",
    "httpx>=0.23,<1.0",
    "black>=23.0,<24.0",
    "mypy>=1.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
